fix: adjust font size for list elements for improved readability

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,6 +49,7 @@ h5 { font-size: 0.5rem; }
 h6 { font-size: 0.25rem;}
 
 p { font-size: 0.875rem;}
+ul, ol, li { font-size: 0.875rem;}
 
 a{color:var(--link-color);text-decoration:none;}
 a:hover{text-decoration:underline;}
